--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ nav h2{color:var(--accent);}
 
 nav ul{
 display:flex;
-gap:25px;
 list-style:none;
+gap:25px;
 }
 
 nav a{
@@ -96,13 +96,12 @@ cursor:pointer;
 cursor:pointer;
 font-size:20px;
 color:var(--accent);
-margin-right:15px;
 }
 
 /* HERO */
 .hero{
 height:100vh;
-background:url('/mnt/data/E136C109-43BA-4143-B1CD-5D842D4FCB97.jpeg');
+background:url('https://images.unsplash.com/photo-1503387762-592deb58ef4e');
 background-size:cover;
 background-position:center;
 background-attachment:fixed;
@@ -111,6 +110,7 @@ flex-direction:column;
 justify-content:center;
 align-items:center;
 text-align:center;
+padding:20px;
 }
 
 .hero h1{
@@ -130,9 +130,7 @@ cursor:pointer;
 box-shadow:0 10px 25px rgba(56,189,248,0.4);
 transition:0.3s;
 }
-.hero button:hover{
-transform:scale(1.07);
-}
+.hero button:hover{transform:scale(1.07);}
 
 /* Sections */
 section{
@@ -155,14 +153,14 @@ color:var(--accent);
 }
 
 /* ABOUT */
-.about-container{
+.about{
 display:flex;
 gap:40px;
 flex-wrap:wrap;
 align-items:center;
 }
 
-.about-container img{
+.about img{
 width:300px;
 height:350px;
 object-fit:cover;
@@ -171,14 +169,14 @@ box-shadow:0 15px 50px rgba(56,189,248,0.5);
 }
 
 .resume-btn{
-display:inline-block;
 margin-top:20px;
 padding:10px 25px;
+border:none;
+border-radius:30px;
 background:var(--accent);
 color:#0f172a;
-border-radius:30px;
-text-decoration:none;
 font-weight:600;
+cursor:pointer;
 }
 
 /* SKILLS */
@@ -196,7 +194,7 @@ text-align:center;
 border:1px solid var(--accent);
 }
 
-/* PROJECT GRID */
+/* PROJECTS */
 .projects{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
@@ -216,9 +214,7 @@ object-fit:cover;
 transition:0.4s;
 }
 
-.project-card:hover img{
-transform:scale(1.1);
-}
+.project-card:hover img{transform:scale(1.1);}
 
 .project-overlay{
 position:absolute;
@@ -256,11 +252,18 @@ color:var(--accent);
 font-size:22px;
 transition:0.3s;
 }
-
 .icon:hover{
 background:var(--accent);
 color:#0f172a;
 transform:scale(1.1);
+}
+
+/* FOOTER */
+footer{
+text-align:center;
+padding:30px;
+background:#020617;
+margin-top:50px;
 }
 
 /* MOBILE */
@@ -277,7 +280,8 @@ padding:20px;
 display:none;
 }
 nav ul.active{display:flex;}
-.about-container{flex-direction:column;text-align:center;}
+.about{flex-direction:column;text-align:center;}
+.hero h1{font-size:36px;}
 }
 </style>
 </head>
@@ -293,8 +297,7 @@ nav ul.active{display:flex;}
 <ul id="navLinks">
 <li><a href="#about">About</a></li>
 <li><a href="#skills">Skills</a></li>
-<li><a href="#design2d">2D Designs</a></li>
-<li><a href="#design3d">3D Renders</a></li>
+<li><a href="#projects">Engineering Works</a></li>
 <li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
@@ -306,21 +309,12 @@ nav ul.active{display:flex;}
 
 <section id="about">
 <h2 class="section-title">About Me</h2>
-<div class="about-container">
-<img src="/mnt/data/42584D02-1B72-470E-A778-119DF060820B.jpeg">
+<div class="about">
+<img src="https://images.unsplash.com/photo-1603415526960-f8f0a4c03d4a">
 <div>
 <p>
-I am a confident and highly motivated Civil Engineering student currently pursuing my Bachelor’s degree at Savitribai Phule Pune University. With a diploma background in Civil Engineering, I have developed both practical site exposure and strong technical fundamentals.
-<br><br>
-I am a quick learner who is always eager to explore new concepts, tools, and technologies. I believe in doing every task with precision and professionalism.
-<br><br>
-I have working knowledge of basic AutoCAD and a good understanding of construction drawings, estimation fundamentals, and material planning.
-<br><br>
-My goal is to continuously upgrade my skills and grow into a technically sound and responsible civil engineer.
+I am a confident and highly motivated Civil Engineering student pursuing my Bachelor's degree. I am a quick learner and always eager to explore new tools and technologies. I have basic working knowledge of AutoCAD and a strong interest in structural planning and estimation.
 </p>
-
-<a href="resume.jpg" target="_blank" class="resume-btn">View Resume</a>
-
 </div>
 </div>
 </section>
@@ -330,35 +324,32 @@ My goal is to continuously upgrade my skills and grow into a technically sound a
 <div class="skills-grid">
 <div class="skill-card">AutoCAD</div>
 <div class="skill-card">Revit</div>
-<div class="skill-card">Structural Basics</div>
 <div class="skill-card">Estimation</div>
+<div class="skill-card">Structural Basics</div>
 <div class="skill-card">MS Excel</div>
-<div class="skill-card">Site Management</div>
+<div class="skill-card">Site Supervision</div>
 </div>
 </section>
 
-<section id="design2d">
-<h2 class="section-title">2D House Designs</h2>
+<section id="projects">
+<h2 class="section-title">Engineering Works</h2>
 <div class="projects">
-<div class="project-card">
-<img src="/mnt/data/DDB9AF8B-C624-4E33-BABE-17D7BAF20C43.png">
-<div class="project-overlay">Residential 2D Floor Plan</div>
-</div>
-</div>
-</section>
 
-<section id="design3d">
-<h2 class="section-title">3D Engineering Renders</h2>
-<div class="projects">
 <div class="project-card">
-<img src="/mnt/data/E136C109-43BA-4143-B1CD-5D842D4FCB97.jpeg">
-<div class="project-overlay">MSRTC Bus Terminal Concept</div>
+<img src="https://images.unsplash.com/photo-1581093458791-9f3c3900df3f">
+<div class="project-overlay">2D Residential Floor Plan Drafting</div>
 </div>
 
 <div class="project-card">
-<img src="/mnt/data/809E4692-9AA1-4E3D-956C-7AA1541D059A.jpeg">
-<div class="project-overlay">3D Residential Rendering</div>
+<img src="https://images.unsplash.com/photo-1590496793929-36417d3117de">
+<div class="project-overlay">Bus Terminal Structural Concept</div>
 </div>
+
+<div class="project-card">
+<img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c">
+<div class="project-overlay">Modern 3D Indian House Design</div>
+</div>
+
 </div>
 </section>
 
@@ -371,12 +362,20 @@ My goal is to continuously upgrade my skills and grow into a technically sound a
 </div>
 </section>
 
+<footer>
+©️ 2026 Swaraj Vikas Gade | Civil Engineering Portfolio
+</footer>
+
 <script>
 const sections=document.querySelectorAll("section");
 function reveal(){
 sections.forEach(sec=>{
 const rect=sec.getBoundingClientRect();
-if(rect.top<window.innerHeight-100){sec.classList.add("show");}
+if(rect.top<window.innerHeight-100 && rect.bottom>100){
+sec.classList.add("show");
+}else{
+sec.classList.remove("show");
+}
 });
 }
 window.addEventListener("scroll",reveal);
